--- a/jsn.html
+++ b/jsn.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
-<htm>
-<head>
-	<title>
-		Arrival Hall 1011.
-	</title>
-	<meta name="description" content="jason yu. web developer and entrepreneur">
+<html>
+  <head>
+    <title>Terminal 1011</title>
+    <meta name="description" content="jason yu. web developer and entrepreneur">
 	<meta name="keywords" content="web design, web development, singapore, nus, chilli corn carne"/>
 	<meta name="author" content="Jason Yu Weizhong">
-	<script type="text/javascript" src="script.js"></script>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-</head>
-
-<body>
-	<div id="container">
-		
-			<div id="name" class="span12">
-				Viewing Gallery
-			</div>
-	    </div>
-		<div id="about">
-			<a href="#">Arrivals</a>
-			<a href="#">Departures</a>
-			<a href="#">Sky Train</a>
-			<a href="#">Lax Lounge</a>
-		</div>
-		<div id="feedback">
-			<textarea>
-			</textarea>
-		</div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </head>
+  <body>
+  	<div class="container-fluid">
+  		<div class="row-fluid">
+  			<div class="span12">
+  				<h1>Hello World</h1>
+  			</div>
+  		</div>
+    			
 	</div>
-</body>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
+
+
